packages/lustre-v6.6.103.3/test/should_fail/semantics/X1.lus
node X1 (b: bool; n: int)
returns (m: int);
let
  m = current(n when b);
tel

